tests/neg/i7248.scala
object Test extends App {
  given f[H](using h: H) as H = h
  summon[Int]  // error
}